--- a/hm3d_data_collector/config/process_gt.yaml
+++ b/hm3d_data_collector/config/process_gt.yaml
@@ -1,32 +1,11 @@
 
 
-defaults:
-  - general
-  - _self_
-
-habitat:
-  dataset_dir: /media/public_dataset/habitat/v0.2
-  list_sub_dir:
-    - train
-    - val
-    - minival
-  
-
-hydra:
-  searchpath:
-    - ${oc.env:DVF_MAP_CFG_DIR}
-
-
-log_dir: ${get_hydra_file_dirname:}/logs/${date}/${script}
-
-data_dir: /media/Pluto_tmp/kike/canonical_map_ws/collected_data/pilot_scenes
-
-scene_name: 00808-y9hTuugGdiq
-scene_version: 0
+excluded_semantics: ['ceiling', "wall", "frame", "rod", "unknown", "Unknown"]
+min_vxl_sem_map: 20
 
 hm_data:
-  scene: ${scene_name}
-  version: ${scene_version}
+  scene: ${hm_idx_scene}-${hm_scene_name}
+  version: ${hm_data_version}
   saved_dir: ${data_dir}/${hm_data.scene}_${hm_data.version}
   cfg: ${load:${hm_data.saved_dir}/cfg.yaml}
   position_fn: ${hm_data.saved_dir}/hm_states.txt
@@ -37,7 +16,7 @@ hm_data:
   rgb_dir: ${hm_data.saved_dir}/rgb
   depth_dir: ${hm_data.saved_dir}/depth
   semantic_dir: ${hm_data.saved_dir}/semantic
-  stable_semantic_ratio: 0.05
+  semantic_ratio: 0.01 # ratio of number voxel per frame to define an object
   sensor_wc:
     translation: [0.0, 0.0, 0.0]
     rotation: [180, 0, 0]
@@ -51,13 +30,14 @@ hm_data:
       max_depth: 2.0
       min_depth: 0.2
 
+
 voxel_grid_2d:
   voxel_type: voxel_grid_2d
-  grid_size: 0.01
+  grid_size: 0.05
   padding: 10
 
 voxel_grid_3d:
   voxel_type: voxel_grid_3d
-  grid_size: 0.01
+  grid_size: 0.05
   padding: 10
   
