--- a/examples/cfg.yaml
+++ b/examples/cfg.yaml
@@ -17,5 +17,6 @@ hm_scene_name: h1zeeAwLh9Z
 hm_data_version: 0
 
 data_dir: /media/datasets/hm_semantic_maps/test
+hm3d_dir: /media/datasets/habitat/v0.2/
 log_dir: ${get_hydra_file_dirname:}/logs/${script}/${date}
 
