--- a/examples/cfg.yaml
+++ b/examples/cfg.yaml
@@ -11,12 +11,15 @@ defaults:
   - process_gt
   - _self_
 
-hm_split: val
-hm_idx_scene: 00815
-hm_scene_name: h1zeeAwLh9Z 
+data_collection:
+  init_pos: [0.0, 0.0, 0.0]
+
+hm_split: train
+hm_idx_scene: '00020'
+hm_scene_name: XYyR54sxe6b 
 hm_data_version: 0
 
-data_dir: /media/datasets/hm_semantic_maps/test
+data_dir: /media/datasets/hm_semantic_maps/on_collecting/elisa/${date}
 hm3d_dir: /media/datasets/habitat/v0.2/
 log_dir: ${get_hydra_file_dirname:}/logs/${script}/${date}
 
