--- a/hm3d_data_collector/config/data_collection.yaml
+++ b/hm3d_data_collector/config/data_collection.yaml
@@ -5,8 +5,7 @@ hm_scene_name: h1zeeAwLh9Z
 hm_data_version: 1
 
 data_collection:
-  # init_pos: [-0, 0.0, -0]
-  init_pos: [9.0592165, 0.049023435, -6.951927]
+  init_pos: [0.0, 0.0, 0.0]
   idx_scene: ${hm_idx_scene}
   scene: ${hm_scene_name}
   version: ${hm_data_version}
