--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,12 @@
-# pyquaternion
-# GitPython
-# PyYAML
-# omegaconf
-# imageio
-# scipy
-# vispy
-# matplotlib
-# shapely
-# scikit-image
-# jinja2
-# typeguard
-# imageio-ffmpeg
-# numpy==1.26.4
+scikit-image
+scipy
 plyfile
 coolname
 hydra-core
 getch
 tqdm
 pyquaternion
+dill
+jinja2
+pandas
+vispy
