Enhance Docker setup and documentation
- Updated Dockerfile to clone and install hm3d_data_collector
- Added usage instructions for Docker in README
- Created docker_run.sh script for easier container execution
- Modified configuration to point to the correct data directory
- Improved setup.sh with informative echo statements

--- a/examples/cfg.yaml
+++ b/examples/cfg.yaml
@@ -19,7 +19,7 @@ hm_data:
   init_pos: [0.0, 0.0, 0.0]
 
 data_dir: ${get_hydra_dirname:}/logs/data_collected
-hm3d_dir: /datasets
+hm3d_dir: /media/datasets/habitat/v0.2/
 
 voxel_grid_2d:
   grid_size: 0.01
