--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,4 @@ pandas
 vispy
 hydra-core
 geometry-perception-utils-dev @ git+https://github.com/EnriqueSolarte/geometry_perception_utils.git@latest
+numpy==1.26.4
